Add microservice image upload
