# src/routes/Content/photo.routes.ts
@@ -12,5 +12,6 @@ photoRoutes.post("/", authenticationMiddleware.authenticateUser, photoController
 photoRoutes.put("/:id", authenticationMiddleware.authenticateUser, photoController.updatePhoto);
 photoRoutes.delete("/:id", authenticationMiddleware.authenticateUser, photoController.deletePhoto);
 photoRoutes.get("/", authenticationMiddleware.authenticateUser, photoController.getPostPhotos);
+photoRoutes.patch("/ai-info", authenticationMiddleware.authenticateAIMicroservice, photoController.updateAiInfo);
 
 export default photoRoutes;
